--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.6.3",
@@ -39,5 +40,5 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
-  "proxy": "localhost:3000"
+  "proxy": "localhost:3000/"
 }
